# bec_messages

./: README.md  combined_test.json  test1  test_linked.d.ts
.build_utils/: build_schema.py  build_typescript_from_schema.py  create_test_data.py
json_schema/: ACLAccountsMessage.json  ACLAccountsMessage.rs  AlarmMessage.json  AvailableResourceMessage.json  BECMessage.json  BECSerializable.json  BECStatus.json  BecCodecInfo.json  BundleMessage.json  ClientInfoMessage.json  CredentialsMessage.json  DAPConfigMessage.json  DAPRequestMessage.json  DAPResponseMessage.json  DeviceAsyncUpdate.json  DeviceConfigMessage.json  DeviceInfoMessage.json  DeviceInitializationProgressMessage.json  DeviceInstructionMessage.json  DeviceInstructionResponse.json  DeviceMessage.json  DeviceMonitor1DMessage.json  DeviceMonitor2DMessage.json  DevicePreviewMessage.json  DeviceRPCMessage.json  DeviceReqStatusMessage.json  DeviceStatusMessage.json  DeviceUserROIMessage.json  EndpointInfoMessage.json  ErrorInfo.json  FileContentMessage.json  FileMessage.json  GUIAutoUpdateConfigMessage.json  GUIConfigMessage.json  GUIDataMessage.json  GUIInstructionMessage.json  GUIRegistryStateMessage.json  LogMessage.json  LoginInfoMessage.json  MacroUpdateMessage.json  (+33 more)
prof/: combined.prof  test_bec_core_msgpack_roundtrip.prof  test_msgpack_roundtrip.prof
python/: pyproject.toml
python/bec_messages/: bec_serializable.py  codecs.py  endpoints.py  messages.py  numpy_encoder.py  serialization.py  serialization_registry.py
python/tests/: test_performance.py  test_serialization_variants.py
(+140 files in other folders)
